# PGE

./: .gitignore  Cargo.toml  README.md
examples/: hello_rectangle.rs  hello_triangle.rs  sandbox.rs  tri.vert
examples/rectangle/: hello_rectangle.rs  rect.frag  rect.vert
examples/triangle/: hello_triangle.rs  tri.frag
gl_obj/: Cargo.toml
gl_obj/src/: ibuf.rs  shader.rs  varray.rs  vbuf.rs
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/pge_macros/: Cargo.toml
lib/pge_macros/example/: args_ast.rs  example.rs  input_struct_ast.rs
lib/pge_macros/src/: lib.rs
lib/shader_parse/: Cargo.toml
lib/shader_parse/src/: lib.rs
lib/shader_parse/src/lexer/: mod.rs
log/: Cargo.toml
log/src/: color.rs
math/: Cargo.toml
math/src/: lib.rs  quat.rs  vec3d.rs  vec4d.rs
math/src/noise/: mod.rs  noise_params.rs
src/: lib.rs
src/gl_obj/: ibuf.rs  lib.rs  mod.rs  shader.rs  texture.rs  varray.rs  vbuf.rs
src/log/: color.rs  mod.rs  timer.rs
src/math/: complex.rs  fct.rs  mat3.rs  mod.rs  quat.rs  vec2d.rs  vec3d.rs  vec4d.rs
src/math/noise/: open_simplex.rs  simplex_voronoi.rs
src/math/vectors/: mod.rs  vec2d.rs  vec3d.rs  vec4d.rs
src/render/: buffer.rs  camera.rs  ibuf.rs  mod.rs  renderer.rs  shader.rs  texture.rs  varray.rs  vbuf.rs
src/render/buffer/: index_buffer.rs  mod.rs  vertex_buffer.rs
src/render/texture/: mod.rs  texture.rs
src/ressources/: mod.rs  png.rs
src/ressources/images/png/: chunk.rs  chunktype.rs  png.rs
src/ressources/png/: chunktype.rs  mod.rs  png.rs
src/utils/: mod.rs  time.rs
src/utils/color/: hsb.rs  mod.rs  rgb.rs
src/window/: lib.rs  mod.rs
window/: Cargo.toml
