[package]
name = "pge"
version = "0.1.0"
authors = ["Derobert <adriendml99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
chrono = "*"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"