[package]
name = "pge_macros"
version = "0.1.0"
authors = ["Derobert <adriendml99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.56", features = ["extra-traits","full","printing"]} 
quote = "1.0.2"

[lib]
proc-macro = true 

[[example]]
name = "example"
path = "example/example.rs"